--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,22 +6,10 @@ on:
   push:
     branches: [ "main" ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   Hoolah:
+    runs-on: ubuntu-latetest
+    steps:
+    - name: testtest
     # Check if workflow call runs properly
-    uses: ./.github/workflows/set-common-env.yml
-    
-    # steps:
-    #   # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    #   - uses: actions/checkout@v3
-
-    #   # Check if workflow call runs properly
-    #   - uses: ./.github/workflows/set-common-env.yml
-
-    #   # Runs a set of commands using the runners shell
-    #   - name: Run a multi-line script
-    #     run: |
-    #       echo Add other actions to build,
-    #       echo test, and deploy your project.
+      uses: ./.github/workflows/set-common-env.yml
