--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,9 @@ jobs:
   Hoolah:
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4.1.1
+    
     - name: testtest
     # Check if workflow call runs properly
       uses: ./.github/workflows/set-common-env.yml
