--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -18,12 +18,9 @@ on:
         type: boolean
       tags:
         description: 'Test scenario tags'
-        required: true
+        required: false
         type: string
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
+        default: abcd
 
 jobs:
   print-tag:
