--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -70,7 +70,5 @@ jobs:
         shell: bash
 
       - name: condition test
-        run: |
-          echo "failure : ${{ failure() }}"
-          echo "success : ${{ success() }}"
-          echo "RESULT=$( ${{ github.event_name == 'push' ? 'PUSH_EVENT' : 'OTHER_EVENT' }} )" >> $GITHUB_ENV
+        run: |     
+          echo "RESULT=$( ${{ github.event_name == 'push' && 'PUSH_EVENT' || 'OTHER_EVENT' }} )" >> $GITHUB_ENV
