--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -70,4 +70,5 @@ jobs:
 
       - name: condition test
         run: |     
-          echo "RESULT=$( ${{ github.event_name == 'push' && 'PUSH_EVENT' || 'OTHER_EVENT' }} )" >> $GITHUB_ENV
+          echo "RESULT=${{ github.event_name == 'push' && 'PUSH_EVENT' || 'OTHER_EVENT' }}" >> $GITHUB_ENV
+          echo "${{ github.event_name == 'push' && 'PUSH_EVENT' || 'OTHER_EVENT' }}
