--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -55,5 +55,5 @@ jobs:
       #     echo "Message : ${{ env.MESSAGE }}"
       - name: set Message String to Show
         run: |
-          echo "$(${{ env.INPUT_REGION == 'Skip (Not deploying to ECS-MultiRegion)' && ${{ format('DEPLOYMENT SUCCESS in {0}', env.INPUT_ENV) }} || ${{ format('DEPLOYMENT SUCCESS in {0} - {1}', env.INPUT_ENV, env.INPUT_REGION) }}
+          echo "${{ env.INPUT_REGION == 'Skip (Not deploying to ECS-MultiRegion)' && format('DEPLOYMENT SUCCESS in {0}', env.INPUT_ENV) || format('DEPLOYMENT SUCCESS in {0} - {1}', env.INPUT_ENV, env.INPUT_REGION) }}"
 
