--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -26,30 +26,38 @@ on:
 
 env:
   INPUT_ENV: ${{ github.event.inputs.env }}
-  INPUT_REGION: ${{ github.event.inputs.region }}
+  INPUT_REGION: ${{ contains(github.event.inputs.region, 'Skip') && 'Skip' || github.event.inputs.region }}
+  #위 replacement 적용하기
       
 jobs:
   TESTS:
     runs-on: ubuntu-latest
     steps:
       - name: checkout Repository
+        # id: checkOut
         uses: actions/checkout@v4.1.1
-        
-      # - name: test composite action with inputs
-      #   uses: ./.github/actions/test/test/
-      #   with:
-      #     IS_SUCCESS: ${{ success() }}
-      #     WEBHOOK: 'hello'
-      #     TITLE: ${{ contains( github.repository, '/READ' ) && format('DEPLOYMENT SUCCESS in {0}', env.INPUT_ENV) || format('DEPLOYMENT SUCCESS in {0} - {1}', env.INPUT_ENV, env.INPUT_REGION) }}
-      #     MESSAGE: ${{ github.repository }}
-          
-      - name: set Message String to Show
+      
+      - name: print region
+        # id: print
+        if: ${{ always() }}
         run: |
-          echo "${{ contains( github.repository, '/READ' ) && format('DEPLOYMENT SUCCESS in {0}', env.INPUT_ENV) || format('DEPLOYMENT SUCCESS in {0} - {1}', env.INPUT_ENV, env.INPUT_REGION) }}"
+          echo "${{ INPUT_REGION }}"
 
-      - name: print SUCCESS()
+      - name: set Message String to Show
+        id: set
         run: |
-          echo "${{ success() }}"
+          echo "${{ !contains( github.repository, '/READ' ) && format('DEPLOYMENT SUCCESS in {0}', env.INPUT_ENV) || format('DEPLOYMENT SUCCESS in {0} - {1}', env.INPUT_ENV, env.INPUT_REGION) }}"
+        
+      - name: test composite action with inputs
+        uses: ./.github/actions/test/test/
+        with:
+          OUTPUTS: ${{ join(steps.*.outputs.*, '\n') }}
+          WEBHOOK: 'hello'
+          TITLE: ${{ contains( github.repository, '/READ' ) && format('DEPLOYMENT SUCCESS in {0}', env.INPUT_ENV) || format('DEPLOYMENT SUCCESS in {0} - {1}', env.INPUT_ENV, env.INPUT_REGION) }}
+          MESSAGE: ${{ github.repository }}
+          
+
+  
     # steps:
     #   - name: Check if region input is provided
     #     run: |
