--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -39,21 +39,22 @@ jobs:
       
       - name: print region
         id: print
-        if: ${{ always() }}
+        if: ${{ !always() }}
         run: |
           echo "${{ env.INPUT_REGION }}"
 
       - name: set Message String to Show
         id: set
         run: |
-          echo "${{ !contains( github.repository, '/READ' ) && format('DEPLOYMENT SUCCESS in {0}', env.INPUT_ENV) || format('DEPLOYMENT SUCCESS in {0} - {1}', env.INPUT_ENV, env.INPUT_REGION) }}"
-      
+          echo "${{ contains( github.repository, '/READ' ) && format('DEPLOYMENT {0} in {1}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED' , env.INPUT_ENV) || format('DEPLOYMENT {0} in {1} - {2}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED', env.INPUT_ENV, env.INPUT_REGION) }}"
+
+
       - name: test composite action with inputs
         uses: ./.github/actions/test/test/
         with:
           # OUTPUTS: ${{ join(steps.*.outputs.*, '\n') }}
           WEBHOOK: 'hello'
-          TITLE: ${{ contains( github.repository, '/READ' ) && format('DEPLOYMENT SUCCESS in {0}', env.INPUT_ENV) || format('DEPLOYMENT SUCCESS in {0} - {1}', env.INPUT_ENV, env.INPUT_REGION) }}
+          TITLE: ${{ contains( github.repository, '/READ' ) && format('DEPLOYMENT {0} in {1}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED' , env.INPUT_ENV) || format('DEPLOYMENT {0} in {1} - {2}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED', env.INPUT_ENV, env.INPUT_REGION) }}
           MESSAGE: ${{ contains(join(steps.*.outcome, ','), 'success') }}
 
       # - name: Slack Notification
