join, steps.*.outcome

--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -46,10 +46,8 @@ jobs:
       - name: set Message String to Show
         id: set
         run: |
-          echo "${{ contains( github.repository, '/READ' ) && format('DEPLOYMENT {0} in {1}', \
-            contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED' , env.INPUT_ENV) || format('DEPLOYMENT {0} in {1} - {2}', \
-            contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED', env.INPUT_ENV, env.INPUT_REGION) }}"
-
+          echo "${{ contains( github.repository, '/READ' ) && format('DEPLOYMENT {0} in {1}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED' , env.INPUT_ENV) || format('DEPLOYMENT {0} in {1} - {2}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED', env.INPUT_ENV, env.INPUT_REGION) }}"
+          echo "${{ join(steps.*.outcome, ',') }}"
 
       - name: test composite action with inputs
         uses: ./.github/actions/test/test/
