--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -62,9 +62,12 @@ jobs:
         run: |
           echo "${{ env.INPUT_REGION }}"
           echo "INPUT_REGION=overwrite1" >> $GITHUB_ENV
+          echo "INPUT_ENV=overwrite2" > $GITHUB_ENV
+
+      - name: print env
+        run: |
           echo "${{ env.INPUT_REGION }}"
-          echo "INPUT_REGION=overwrite2" > $GITHUB_ENV
-          echo "${{ env.INPUT_REGION }}"
+          echo "${{ env.INPUT_ENV }}"
 
       #multiline 테스트 - O
       #환경변수 덮어쓰기 테스트
