--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -62,16 +62,17 @@ jobs:
         run: |
           echo "${{ env.INPUT_REGION }}"
           echo "INPUT_REGION=overwrite1" >> $GITHUB_ENV
-          echo "INPUT_ENV=overwrite2" > $GITHUB_ENV
+          echo "INPUT_ENV=overwrite2" >> $GITHUB_ENV
 
       - name: print env
         run: |
           echo "${{ env.INPUT_REGION }}"
           echo "${{ env.INPUT_ENV }}"
 
-      #multiline 테스트 - O
+      #multiline 테스트 - O 
       #환경변수 덮어쓰기 테스트
       #슬랙 composite action 테스트
+      #변경사항 적용하기
       #build 테스트 (policy, cloud-transfer, fe-b2b)
       #release, ci 주석 처리 후 테스트 (policy, cloud-transfer, fe-b2b)
 
