--- a/.github/actions/test/slack-test/action.yml
+++ b/.github/actions/test/slack-test/action.yml
@@ -27,6 +27,8 @@ runs:
       shell: bash
       run: |
         echo "${{ inputs.IS_SUCCESS }}"
+        echo "${{ inputs.IS_SUCCESS == "fail" }}"
+        echo "${{ inputs.IS_SUCCESS == "success" }}"
         echo "${{ inputs.PERSONAL_SLACK_WEBHOOK }}"
         echo "${{ inputs.TITLE }}"
         echo "${{ inputs.MESSAGE }}"
