--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -57,8 +57,8 @@ jobs:
           #   ${{ contains( github.repository, '/rakuten-drive-cloud-transfer' )
           #   && format('DEPLOYMENT {0} in {1}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED' , env.INPUT_ENV) 
           #   || format('DEPLOYMENT {0} in {1} - {2}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED', env.INPUT_ENV, env.INPUT_REGION) }}
-          TITLE_ONSUCCESS: ${{ IS_SUCCESS && "success" || "fail" }}
-          TITLE_ONFAIL: fail_onfail
+          TITLE_ONSUCCESS: SUCCESS!
+          TITLE_ONFAIL: FAIL!
           MESSAGE: ${{ contains(join(steps.*.outcome, ','), 'success') }}
 
       - name: test Overwriting environments
