--- a/.github/actions/test/slack-test/action.yml
+++ b/.github/actions/test/slack-test/action.yml
@@ -39,7 +39,7 @@ runs:
       uses: rtCamp/action-slack-notify@v2.2.0
       env:
         SLACK_WEBHOOK: ${{ inputs.PERSONAL_SLACK_WEBHOOK }}
-        SLACK_TITLE: ${{ inputs.IS_SUCCESS && inputs.TITLE_ONSUCCESS || inputs.TITLE_ONFAIL }}
+        SLACK_TITLE: ${{ inputs.IS_SUCCESS == 'true' && inputs.TITLE_ONSUCCESS || inputs.TITLE_ONFAIL }}
         SLACK_MESSAGE: '${{ github.repository }}'
 
 
