--- a/.github/workflows/Dispatch Test.yml
+++ b/.github/workflows/Dispatch Test.yml
@@ -48,10 +48,11 @@ jobs:
         run: |
           echo "${{ contains( github.repository, '/rakuten-drive-cloud-transfer' ) && format('DEPLOYMENT {0} in {1}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED' , env.INPUT_ENV) || format('DEPLOYMENT {0} in {1} - {2}', contains(join(steps.*.outcome, ','), 'success') && 'SUCCESS' || 'FAILED', env.INPUT_ENV, env.INPUT_REGION) }}"
 
+      #assign ID to necessary steps to decide whether the job is success or fail
       - name: test composite action with inputs
         uses: ./.github/actions/test/slack-test/
         with:
-          IS_SUCCESS: ${{ !contains(join(steps.*.outcome, ','), 'success') }}
+          IS_SUCCESS: ${{ contains(join(steps.*.outcome, ','), 'success') }}
           PERSONAL_SLACK_WEBHOOK: ${{ secrets.PERSONAL_SLACK_WEBHOOK }}
           # TITLE: >-
           #   ${{ contains( github.repository, '/rakuten-drive-cloud-transfer' )
