--- a/.github/actions/test/slack-test/action.yml
+++ b/.github/actions/test/slack-test/action.yml
@@ -23,8 +23,8 @@ inputs:
 runs:
   using: "composite"
   steps:    
-    
     - name: Notify to Slack (Test)
+      if: ${{ always() }}
       uses: rtCamp/action-slack-notify@v2.2.0
       env:
         SLACK_WEBHOOK: ${{ inputs.PERSONAL_SLACK_WEBHOOK }}
